trunk/Archive2/b7/47260c15883bde/output
main.cpp: In function 'int main()':
main.cpp:17:9: error: no matching function for call to 'scan(main()::<lambda(int)>, int)'
     }, 4);
         ^
main.cpp:17:9: note: candidate is:
main.cpp:8:6: note: template<class ... Args> void scan(std::function<void(Args ...)>, Args ...)
 void scan(std::function<void(Args...)> f, Args... a)
      ^
main.cpp:8:6: note:   template argument deduction/substitution failed:
main.cpp:17:9: note:   'main()::<lambda(int)>' is not derived from 'std::function<void(Args ...)>'
     }, 4);
         ^
